zeit.cms changes
================

1.48.1 (unreleased)
-------------------

- Nothing changed yet.


1.48.0 (2011-03-23)
-------------------

-  Generalised how checkout/checkin works so it also works for non-dav content
  (for #7826)

- Added IDAVContent for content from the original repository. This is to
  separate it from content from other repositories (like brightcove) (for
  #7826).

- Made locking support optional (for #7826)

- A view on workingcopy objects used to lookup objects directly in the
  repository. Replaced this by an ICMSContent() adapter lookup (for #7826)

- Improve HTTP test layer: stores errors in a list instead of printing them
  (for #8085).


1.47.0 (2010-08-16)
-------------------

- Add detail url to access counter (#7860).



1.46.0 (2010-08-09)
-------------------

- Make sure indexing referencing object doesn't break when there is change in
  the list duinng iteration (#7635).
- Use gocept.selenium to run selenium tests (#7549).
- Remove the automatic syndication of articles with serie 'News' to a news
  channel.


1.45.0 (2010-07-07)
-------------------

- Fix test isolation problem (#7467).
- Removed assignment of UUIDs, this is handled by the DAV-Server now (#7366).
- Added trackeback info to publish/rectract tasks (#7443).
- Show UUID when there are duplication errors (#7247).
- Allow "checkin" for ghosts (#7152).
- Preview URLs are now determined using an adapter (#7030).
- Added a Nagios checkable view for the length of the publish task queue
  (#6801).
- Update relation index not only on checkin but also on add (#6415).
- Enable flashmessages to be updated via javascript (#6415).
- checkout.helper supports ignoring conflicts now (#7587).
- Avoid race-condition during publish: don't check if we can checkout/checkin,
  but try to checkout/checkin and catch errors. (#7586).


1.44.0 (2010-06-09)
-------------------

- Live-Propertys nur setzen, wenn sich der Wert geändert hat (#7392).
- CAP-Kontext wieder entfernt (#7365).